Added googlebooks Handlers and tests (getbookbyid test doesnt work yet) PRAK25-15
