# internal/types/operations/get_google_book_details_parameters.go
@@ -1,0 +1,108 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package operations
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// NewGetGoogleBookDetailsParams creates a new GetGoogleBookDetailsParams object
+// no default values defined in spec.
+func NewGetGoogleBookDetailsParams() GetGoogleBookDetailsParams {
+
+	return GetGoogleBookDetailsParams{}
+}
+
+// GetGoogleBookDetailsParams contains all the bound params for the get google book details operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getGoogleBookDetails
+type GetGoogleBookDetailsParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Id of book to return.
+	  Required: true
+	  In: path
+	*/
+	GoogleBookID strfmt.UUID `param:"google_book_id"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetGoogleBookDetailsParams() beforehand.
+func (o *GetGoogleBookDetailsParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rGoogleBookID, rhkGoogleBookID, _ := route.Params.GetOK("google_book_id")
+	if err := o.bindGoogleBookID(rGoogleBookID, rhkGoogleBookID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (o *GetGoogleBookDetailsParams) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	// google_book_id
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	if err := o.validateGoogleBookID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindGoogleBookID binds and validates parameter GoogleBookID from path.
+func (o *GetGoogleBookDetailsParams) bindGoogleBookID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	// Format: uuid
+	value, err := formats.Parse("uuid", raw)
+	if err != nil {
+		return errors.InvalidType("google_book_id", "path", "strfmt.UUID", raw)
+	}
+	o.GoogleBookID = *(value.(*strfmt.UUID))
+
+	if err := o.validateGoogleBookID(formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// validateGoogleBookID carries on validations for parameter GoogleBookID
+func (o *GetGoogleBookDetailsParams) validateGoogleBookID(formats strfmt.Registry) error {
+
+	if err := validate.FormatOf("google_book_id", "path", "uuid", o.GoogleBookID.String(), formats); err != nil {
+		return err
+	}
+	return nil
+}
